[package]
name = "yarsg"
version = "0.1.0"
authors = ["Lethon <i@frostmiku.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
pulldown-cmark = "0.8.0"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.8.3"

[profile.release]
panic = 'abort'
